Time: 21 ms, Memory: 55 MB - LeetHub