@@ -1,22 +1,20 @@
 class Solution {
-    List<List<Integer>> res = new ArrayList<>();
-    int n, k;
+    
     public List<List<Integer>> combine(int n, int k) {
-        this.n = n;
-        this.k = k;
-        combine(1, new LinkedList());
+        List<List<Integer>> res = new ArrayList<>();
+        combine(1, new ArrayList(), res, n, k);
         return res;
     }
-    private void combine(int row, LinkedList<Integer> state) {
+    private void combine(int row, ArrayList<Integer> state, List<List<Integer>> res, int n, int k) {
         if(state.size() == k) {
-            res.add(new LinkedList(state));
+            res.add(new ArrayList(state));
             return;
         }
         
         for(int i = row; i <= n; i++) {
             state.add(i);
-            combine(i+1, state);
-            state.removeLast();
+            combine(i+1, state, res, n, k);
+            state.remove(state.size() - 1);
         }
     }
 }
